contentcuration/contentcuration/static/less/channel_create.less
@import "global-variables.less";

@btn-filter-color:#C5C5C5;
@btn-find-color:#6FAFE3;

@channel-clipboard-btn-color: #F2F2F2;
@channel-btn-border-color:#7A7A7A;
@details-bg-color: #EFE6EC;

// nested flexbox settings to ensure that the channels list view is vertically responsive.
body {
	display: flex;
	flex-direction: column;

	#channel-container {
		display: flex;
		height: 0;
		flex-direction: column;
		flex-grow: 1;

		#top-navigation {
			flex: 0;
		}

		#channel_area_wrapper {
			display: flex;
			max-height: 100%;
			flex: 1;

			#channel_list_wrapper {
				display: flex;
				justify-content: center;
			}

			#channel_preview_wrapper {
				display: flex;
				flex-direction: column;
				flex: 1;
				
				#channel_details_overlay {
					display: flex;
					flex-direction: column;
					flex: 1;
					
					#channel_details_panel {
						display: flex;
						flex-direction: column;	
						flex: 1;

						#channel_details_view_panel {
							display: flex;
							flex-direction: column;	
							flex: 1;					
							
							#channel_details {
								flex-direction: column;	
								flex-grow: 1;			
							}
						}
					}
				}
			}
		}
	}
}
// end of flexbox settings.

.default-item{
	color:gray;
	padding:5px 10px;
}

#channel_list_wrapper{
	padding:10px;
	overflow-y:auto;
	width: 100vw;
	transition: width 500ms;
	&.show-panel {
		width: calc(~"100vw - 650px");
	}
	#manage-channel-nav.nav-tabs{
		border-bottom: none;
		margin-bottom: 10px;
		.channel_tab{
		    font-size: 14pt;
		    color: @body-font-color;
		    margin-right: 10px;
		    &:hover { border-color: @body-background; }
		}
		.active .channel_tab{
			background-color: @body-background;
			font-weight: bold;
			border: none;
			border-bottom: 3px solid @blue-500;
		}
	}
	#channel-list-area{
		@channel-container-bg-color: white;
		@channel-continer-border-color: #C5C5C5;
		@channel-container-height: 250px;
		@channel-container-width: 800px;
		@channel-profile-width: 150px;
		@channel-font-size: 18pt;
		@channel-description-font-size: 11pt;
		@channel-btn-color:#CCCCCC;

	    width: @channel-container-width + 50;

		.channel_list_wrapper {
			padding-top: 20px;
			.add_channel_wrapper {
				margin-bottom: 15px;
				padding-right: 50px;
				height: 40px;
				.new_channel_button, .new_set_button {
					cursor: pointer;
					font-size: 18px;
					text-decoration: none;
					&:hover { color:white; }
				}
				.about_sets_button {
					vertical-align: sub;
					font-size: 12pt;
					padding: 0px;
					i {
						font-size: 16pt;
						vertical-align: sub;
					}
				}
			}
		}

		.new-channel {
			display: inline-block;
		    position: relative;
		    left: 13px;
		    top: 6px;
		}
		#pending_list{
			margin-bottom: 30px;
			.pending_container{
		        font-size: 12pt;
		        .pending_text{ padding: 5px;}
		        .btn-pending {
		        	background-color: white;
		        	font-weight:bold;
		        	width: 100%;
		        	border: 2px solid white;
		        	&.accept_invite { color: @blue-500; &:hover{ border-color: @blue-500; }}
		        	&.decline_invite { color: #D14C4C;  &:hover{ border-color: #D14C4C; }}
		        	i {
		        		font-size: 14pt;
    					font-weight: bold;
    				}
		        }
		        .alert{
		        	margin-bottom: 15px;
		        	padding: 5px 15px;
		        	button{ right: 0px; top: 5px; }
		        }
		        &:last-child{ margin-bottom: 50px; }
			}
		}
		.channel_list {
			padding-bottom: 50px;
			.default-item{
				font-size: 12pt;
				margin: 20px 10px 10px 10px;
				color: @annotation-gray;
				text-align: center;
			}
			.is_selected {
				display: none;
				padding-top: 9%;
				i {
					font-size: 45pt;
    				color: @topnav-bg-color;
    				font-weight: bold;
				}
			}

			.channel-container-wrapper {
				background-color: @panel-container-color;
				width: @channel-container-width;
				min-height: @channel-container-height;
				height:auto;
				box-shadow: @box-shadow;
				margin: 0px;
				margin-bottom: 30px;
				padding: 10px;
				border:4px solid @panel-container-color;
				cursor:pointer;

				&.channelset-wrapper {
					min-height: 0px;
				}

				.profile{
					height:100%;
					width: @channel-profile-width;
					margin: 5px 15px 5px 5px;
					.image_dropzone{ width: auto; }
					img{
					    width:130px;
					    height:130px;
					    object-fit: cover;
					}
				}
				.channel_set_icon {
					font-size: 65pt;
					color: @gray-700;
				}
				.delete_channel_set {
					color: @gray-700;
				}
				.manage_area{
					width:100%;
					.open_channel {
						.action-button;
						margin-right:10px;
					}
				}

				.channel_metadata{
					color: @annotation-gray;
					padding: 0px;
					font-size: 11pt;
					.resource-icon {
						padding: 0 3px 0 10px;
					}
					.copy-id-btn{
						padding:3px;
						font-size: 16pt;
    					vertical-align: sub;
						&:hover { color:@blue-500; }
					}
					.copy-id-text{
						display: inline-block;
						padding:2px;
						background-color: @gray-300;
						font-size:11pt;
						border:none;
						font-weight: bold;
						width: 125px;
						color: @gray-700;
					}
					.channel_language{
						max-width: 135px;
					    display: inline-block;
					    margin-bottom: -3px;
					}
				}
				#channel_name_error{
					color:@red-error-color;
					font-weight:bold;
					margin:0;
					padding:0;
					visibility: hidden;
				}
				h4{
					font-size: @channel-font-size;
					font-weight: bold;
					color: @body-font-color;
					margin-bottom: 0px;
					padding-bottom: 5px;
					.channel_name{
						color: @body-font-color;
						height:@channel-font-size + 10px;
					}
					.channel_option_icon {
						cursor:pointer;
						display:inline-block;
						font-size: 20pt;
						padding:10px;
						color: @gray-700;
						position: relative;
						top: -45px;
						&:not(.disabled):hover{ color: @blue-500; }
						&.unstar_channel{
							color: @blue-500;
							&:hover{ color: @blue-200; }
						}
					}
				}
				.description{
					min-height: @channel-container-height - @channel-font-size - 115px;
					overflow-y:auto;
					margin-bottom:5px;
					p{
						font-size: @channel-description-font-size;
					}
				}

				#new_channel_name, textarea{
					height: 35px;
					width: @channel-container-width - @channel-profile-width - 50px;
					color: @body-font-color;
					background: transparent;
				    border: none;
				    border-bottom: 1px solid #BDBDBD;
				    margin-top: 10px;
				}

				#new_channel_name:focus, textarea:focus {
					outline: none;
					border-bottom: 3px solid #BDBDBD;
				    .input-form;
				}
				.delete_channel{
					color: @delete-color;
					font-weight: bold;
					margin-top:10px;
					font-size:9pt;
				}

				.channel_options{
					width: @channel-container-width  - 40px;
					padding-left:@channel-profile-width;
					top: 20px;
					.save_channel {
						.action-button;
					}
				}
				input[type=text] {
					font-size: 20px;
				}
				textarea{
					font-size: 16px;
					resize: none;
					height: @channel-container-height * 0.3;
					margin-top: 25px;
				}

				.tag_area{
					li{
						background-color: @channel-btn-color;
						border: 1px solid @channel-btn-border-color;
						color:black;
						padding: 0px 5px;
						font-size:9pt;
					}
				}
				.updated_time {
					font-style: italic;
					font-size: 10pt;
				    color: gray;
				}
				.delete_channel_set:hover {
					color: @red-error-color;
				}
			}
			.active_channel{
				.is_selected {
					display: block;
				}
				.channel-container-wrapper {
					border-color: @topnav-bg-color;
				}
			}
			.highlight {
				.is_selected i{
					color: @blue-500 !important;
				}
				.channel-container-wrapper {
					border:4px solid @blue-500 !important;
					.channel_name{
						color:@blue-500 !important;
					}
				}

			}
		}
	}
}

@channel-preview-width: 650px;
#channel_preview_wrapper {
    overflow: hidden;
    width: 0px;
    margin-left: 2px;
    background-color: white;
    background-size:     cover;
    background-repeat:   no-repeat;
    background-position: center center;
	#channel_details_overlay {
    	height: inherit;
    	background-color: rgba(240,240,240, 0.8);
    }

    #close_wrapper {
    	margin: 12px 0px;
    	#close_details { margin-right: 20px; }
    }

	#channel_details_panel {
		margin: 0px auto;
		float: none;
		display: table-cell;
		vertical-align: top;
		height: 83vh;
		width: @channel-preview-width - 40px;
		.default-item {
			padding-top: 45%;
		    font-size: 15pt;
		    font-weight: bold;
		    text-align: center;
		    color: @gray-300;
		}
	}
}

